setting nodes- added huge pages